NetBSD Problem Report #39931
From www@NetBSD.org Sat Nov 15 21:49:43 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by narn.NetBSD.org (Postfix) with ESMTP id C5B4563BD3F
for <gnats-bugs@gnats.netbsd.org>; Sat, 15 Nov 2008 21:49:43 +0000 (UTC)
Message-Id: <20081115214943.951EB63B978@narn.NetBSD.org>
Date: Sat, 15 Nov 2008 21:49:43 +0000 (UTC)
From: miod@online.fr
Reply-To: miod@online.fr
To: gnats-bugs@NetBSD.org
Subject: RB_FREQUENCY constant wrong
X-Send-Pr-Version: www-1.0
>Number: 39931
>Category: port-mipsco
>Synopsis: RB_FREQUENCY constant wrong
>Confidential: no
>Severity: critical
>Priority: medium
>Responsible: mbalmer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Nov 15 21:50:00 +0000 2008
>Closed-Date: Mon Jun 29 20:50:23 +0000 2009
>Last-Modified: Mon Jun 29 21:05:02 +0000 2009
>Originator: Miod Vallat
>Release: HEad
>Organization:
>Environment:
>Description:
RB_FREQUENCY is supposed to be the Rambo bus clock divided by 4.
Before rambo.h 1.5, this define did not exist and was hardcoded correctly. sys/arch/mipsco/obio/rambo.h 1.5 introduces it, but as 625,000 instead of 6,250,000 (25MHz/4).
>How-To-Repeat:
Code inspection.
>Fix:
Add the missing zero to RB_FREQUENCY.
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->port-mipsco-maintainer
Responsible-Changed-By: dholland@NetBSD.org
Responsible-Changed-When: Sun, 16 Nov 2008 01:12:53 +0000
Responsible-Changed-Why:
Port-specific.
Responsible-Changed-From-To: port-mipsco-maintainer->mbalmer
Responsible-Changed-By: mbalmer@NetBSD.org
Responsible-Changed-When: Mon, 29 Jun 2009 20:45:50 +0000
Responsible-Changed-Why:
taking care of this now
State-Changed-From-To: open->closed
State-Changed-By: mbalmer@NetBSD.org
State-Changed-When: Mon, 29 Jun 2009 20:50:23 +0000
State-Changed-Why:
Fix commitet in -current, thanks.
From: Marc Balmer <mbalmer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/39931 CVS commit: src/sys/arch/mipsco/obio
Date: Mon, 29 Jun 2009 20:49:25 +0000
Module Name: src
Committed By: mbalmer
Date: Mon Jun 29 20:49:25 UTC 2009
Modified Files:
src/sys/arch/mipsco/obio: rambo.h
Log Message:
Fix integer constant RB_FREQUENC, 25MHz/4 is 6250000L, not 625000L
This fixes PR 39931
PR and fix from Miod Vallat <miod@online.fr>, many thanks!
To generate a diff of this commit:
cvs rdiff -u -r1.6 -r1.7 src/sys/arch/mipsco/obio/rambo.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.