Fix integer constant RB_FREQUENC, 25MHz/4 is 6250000L, not 625000L

This fixes PR 39931

PR and fix from Miod Vallat <miod@online.fr>, many thanks!